syntax = "proto3";

message Foo {
  message FooBar {
    string field_one = 1;
    map<string, int64> field_two = 2;
    repeated int32 field_three = 3;
  }
  optional int32 field_one = 1;
  map<string, Bar> field_two = 2;
  repeated Bar field_three = 3;
  FooBar field_four = 4;
  repeated int64 field_five = 5;
  Baz field_six = 6;
  repeated Baz field_seven = 7 [json_name="luckySeven"];
  int64 field_eight = 8;
  bytes field_nine = 9;
  repeated bytes field_ten = 10;
  optional Bar field_eleven = 11;
  optional Bar field_twelve = 12;
  optional Bar field_thirteen = 13;
}

message Bar {
  string field_one = 1;
  map<string, int64> field_two = 2;
  repeated int32 field_three = 3;
}

enum Baz {
  FOO = 0;
  BAR = 1;
}
